Some UI changes for App Stores, working on layout issues

--- a/src/main/webapp/studio/store/store.css
+++ b/src/main/webapp/studio/store/store.css
@@ -1,11 +1,5 @@
-/* Custom Reset */
-div, p, ul, ol, li, fieldset, form, pre { margin: 0; padding: 0; border: 0; outline: 0; text-decoration: none; font-size: 100%; list-style: none; }
-textarea { resize:none; }
-
 /* Store Items */
 .store_item .controls { padding-top: 21px; }
-
-.store_item { margin-bottom: 20px; }
 
 .store_item .controls button {
   float: right;
@@ -61,26 +55,4 @@ textarea { resize:none; }
 
 .auth_icon {
   margin-right: 20px;
-}
-
-/* Clearfix */
-.clearfix:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  line-height: 0;
-  height: 0;
-}
- 
-.clearfix {
-  display: inline-block;
-}
- 
-html[xmlns] .clearfix {
-  display: block;
-}
- 
-* html .clearfix {
-  height: 1%;
 }
